--- a/day-4/Careers.html
+++ b/day-4/Careers.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="careers.css">
 </head>
 <body>
     <div>
         <h1>Careers @ Cricbuzz</h1>
         <p>We're building a cricket product for the generation of always connected internet users and we need your talent and passion.</p>
         <h3>WHY WORK FOR CRICBUZZ?</h3>
-        <div>
+        <div id="middLe">
             <div>
                 <h3>AWESOME TEAM</h3>
                 <p>You'll join a group of friendly, passionate, hard-working, creative and intelligent people.</p>
@@ -34,12 +35,12 @@
             </div>
         </div>
         <h2>CURRENT OPENINGS</h2>
-        <div>
+        <div class="left">
             <h2>Engineering</h2>
             <div>
-                <a href="#">Front-end developer</a>
+                <a href="Carerrs_Front-end_Devop.html">Front-end developer</a>
                 <a href="#">Senior Android Developer</a>
-                <a href="#">Backend Engineer</a>
+                <a href="Carerrs_Back-end_Engg.html">Backend Engineer</a>
                 <a href="#">Android Developer</a>
                 <a href="#">Database Administrator</a>
                 <a href="#">iOS Developer</a>
@@ -47,8 +48,8 @@
                 <a href="#">Lead Android Developer</a>
             </div>
         </div>
-        <div>
-            <h2>Content</h2>
+        <div class="left">
+            <h2 id="content">Content</h2>
             <div>
                 <a href="#">Motion Graphics Designer & Editor - Mumbai</a>
                 <a href="#">Video Editor - Bangalore</a>
