--- a/day-4/Carerrs_Back-end_Engg.html
+++ b/day-4/Carerrs_Back-end_Engg.html
@@ -6,56 +6,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Carerrs_Back.css" />
 </head>
 <body>
     <div>
         <h1>Careers @ Cricbuzz</h1>
         <p>We're building a cricket product for the generation of always connected internet users and we need your talent and passion.</p>
         <div>
-            <h2>Backend Engineer</h2>
-            <p>Cricbuzz, the most popular destination for Cricket in India, provides all round coverage of international, domestic and T20 cricket tournaments from around the world. Alongside its extremely popular website and mobile site, Cricbuzz's mobile applications for Android, iOS, Windows Phone and Blackberry are the no. 1 cricket apps on the respective app stores.</p>
-            <br>
-            <p>We are looking for back-end developers who can help us create the best cricket experience for desktop, mobile web and app users.</p>
-            <ul>Responsibilities
-                <li>Design, build, and maintain efficient, reusable and reliable code.</li>
-                <li>Provide ongoing maintenance, support, and enhancements in existing systems and platforms.</li>
-                <li>Provide recommendations for improvement and maintain code quality, organization and optimization.</li>
-                <li>Work collaboratively with the front-end and mobile app developers.</li>
-                <li>Work closely with others on design, product and advertising teams to build new features.</li>
-            </ul>
-            <ul>Requirements
-                <li>2+ years of backend development experience.</li>
-                <li>Solid understanding of Object oriented programming.</li>
-                <li>Should have good coding skills in any of the programming language or tech stack preferably in Scala, Golang or Java</li>
-                <li>Understanding of Database management systems like MySQL, Oracle. NoSQL like Mongo, Cassandra or Redis knowledge is a plus</li>
-                <li>Ability to adapt to newer technologies.</li>
-                <li>Understanding of Git/Subversion is a plus.</li>
-                <li>Understanding of front-end technologies such as JavaScript, HTML, CSS is a plus</li>
-            </ul>
-            <form>
-
-            </form>
-        </div>
-        <hr>
-        <div>
-            <h2>CURRENT OPENINGS</h2>
-            <div>
-                <h2>Engineering</h2>
+            <div id="left">
+                <h2>Backend Engineer</h2>
+                <p>Cricbuzz, the most popular destination for Cricket in India, provides all round coverage of international, domestic and T20 cricket tournaments from around the world. Alongside its extremely popular website and mobile site, Cricbuzz's mobile applications for Android, iOS, Windows Phone and Blackberry are the no. 1 cricket apps on the respective app stores.</p>
+                <p>We are looking for back-end developers who can help us create the best cricket experience for desktop, mobile web and app users.</p>
+                <h3>Responsibilities</h3>
+                <ul>
+                    <li>Design, build, and maintain efficient, reusable and reliable code.</li>
+                    <li>Provide ongoing maintenance, support, and enhancements in existing systems and platforms.</li>
+                    <li>Provide recommendations for improvement and maintain code quality, organization and optimization.</li>
+                    <li>Work collaboratively with the front-end and mobile app developers.</li>
+                    <li>Work closely with others on design, product and advertising teams to build new features.</li>
+                </ul>
+                <h3>Requirements</h3>
+                <ul>
+                    <li>2+ years of backend development experience.</li>
+                    <li>Solid understanding of Object oriented programming.</li>
+                    <li>Should have good coding skills in any of the programming language or tech stack preferably in <span class="bld">Scala, Golang or Java</span></li>
+                    <li>Understanding of Database management systems like <span class="bld">MySQL, Oracle</span>. NoSQL like <span class="bld">Mongo, Cassandra or Redis</span> knowledge is a plus</li>
+                    <li>Ability to adapt to newer technologies.</li>
+                    <li>Understanding of Git/Subversion is a plus.</li>
+                    <li>Understanding of front-end technologies such as JavaScript, HTML, CSS is a plus</li>
+                </ul>
+                <form>
+                    <h2>Apply Now</h2>
+                    <label>Name</label>
+                    <input type="text" placeholder="Name"/>
+                    <br>
+                    <label>Email</label>
+                    <input type="email" placeholder="Email"/>
+                    <br>
+                    <label>Tell us about Yourself (300 - 1000 characters)</label>
+                    <input type="text" />
+                    <br>
+                    <label>Links to LinkedIn/Github etc (optional)</label>
+                    <input type="txt" placeholder="Link"/>
+                    <label>(Separate two links with a comma)</label>
+                    <br>
+                    <label>Resume (pdf,doc,docx)</label>
+                    <button>Choose File</button>
+                    <div id="robot">
+                        <div>
+                            <div></div>
+                            I'm not a robot
+                        </div>
+                        <div>
+                            <img src="	https://www.gstatic.com/recaptcha/api2/logo_48.png" alt="">
+                            <div><a href="https://www.google.com/intl/en/policies/privacy/">Privacy</a>-<a href="https://www.google.com/intl/en/policies/terms/">Terms</a></div>
+                        </div>
+                    </div>
+                    <button>Submit</button>
+                </form>
+            </div>
+            <hr>
+            <div id="right">
+                <h2>CURRENT OPENINGS</h2>
                 <div>
-                    <a href="#">Front-end developer</a>
-                    <a href="#">Senior Android Developer</a>
-                    <a href="#">Backend Engineer</a>
-                    <a href="#">Android Developer</a>
-                    <a href="#">Database Administrator</a>
-                    <a href="#">iOS Developer</a>
-                    <a href="#">Linux and Cloud Administrator - Bangalore</a>
-                    <a href="#">Lead Android Developer</a>
-                </div>
-                <h2>Content</h2>
-                <div>
-                    <a href="#">Motion Graphics Designer & Editor - Mumbai</a>
-                    <a href="#">Video Editor - Bangalore</a>
-                    <a href="#">Motion Graphics Artist - Bangalore</a>
+                    <h2>Engineering</h2>
+                    <div>
+                        <a href="Carerrs_Front-end_Devop.html">Front-end developer</a>
+                        <a href="#">Senior Android Developer</a>
+                        <a href="Carerrs_Back-end_Engg.html">Backend Engineer</a>
+                        <a href="#">Android Developer</a>
+                        <a href="#">Database Administrator</a>
+                        <a href="#">iOS Developer</a>
+                        <a href="#">Linux and Cloud Administrator - Bangalore</a>
+                        <a href="#">Lead Android Developer</a>
+                    </div>
+                    <h2>Content</h2>
+                    <div>
+                        <a href="#">Motion Graphics Designer & Editor - Mumbai</a>
+                        <a href="#">Video Editor - Bangalore</a>
+                        <a href="#">Motion Graphics Artist - Bangalore</a>
+                    </div>
                 </div>
             </div>
         </div>
