--- a/day-4/Carerrs_Front-end_Devop.html
+++ b/day-4/Carerrs_Front-end_Devop.html
@@ -6,56 +6,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Carerrs_Back.css" />
 </head>
 <body>
     <div>
         <h1>Careers @ Cricbuzz</h1>
         <p>We're building a cricket product for the generation of always connected internet users and we need your talent and passion.</p>
         <div>
-            <h2>Front-end developer</h2>
-            <p>Cricbuzz, the most popular destination for Cricket in India, provides all round coverage of international, domestic and T20 cricket tournaments from around the world. Alongside its extremely popular website and mobile site, Cricbuzz's mobile applications for Android, iOS, Windows Phone and Blackberry are the no. 1 cricket apps on the respective app stores.</p>
-            <br>
-            <p>We are looking for experienced front-end developers who can help us create the best cricket experience for desktop and mobile web users.</p>
-            <ul>Responsibilities
-                <li>Build scaleable, responsive, optimized and elegant web user experiences using the latest standards and best practices in HTML5, CSS, and JS.</li>
-                <li>Ownership of all front-end development, including code structure, style guides, testing, etc.</li>
-                <li>Improve the quality, performance, and stability of front-end codebase.</li>
-                <li>Work closely with product management, design, development and sales teams to create new features and refine existing ones.</li>
-                <li>Build reusable code for future use.</li>
-                <li>Make sure web pages are optimized for best speed and scalability.</li>
-            </ul>
-            <ul>Requirements
-                <li>1-3 years front end development experience.</li>
-                <li>Be proficient in coding languages such as HTML, CSS, JavaScript, JQuery and AngularJS experience.</li>
-                <li>Experience with CSS preprocessors such as SASS, LESS, etc.</li>
-                <li>Understanding of mobile development best practices (responsive design, progressive enhancement, graceful degradation etc).</li>
-                <li>Understanding the principles of SEO.</li>
-                <li>Good problem solving skills.</li>
-            </ul>
-            <form>
-
-            </form>
-        </div>
-        <hr>
-        <div>
-            <h2>CURRENT OPENINGS</h2>
-            <div>
-                <h2>Engineering</h2>
+            <div id="left">
+                <h2>Front-end developer</h2>
+                <p>Cricbuzz, the most popular destination for Cricket in India, provides all round coverage of international, domestic and T20 cricket tournaments from around the world. Alongside its extremely popular website and mobile site, Cricbuzz's mobile applications for Android, iOS, Windows Phone and Blackberry are the no. 1 cricket apps on the respective app stores.</p>
+                <br>
+                <p>We are looking for experienced front-end developers who can help us create the best cricket experience for desktop and mobile web users.</p>
+                <ul>Responsibilities
+                    <li>Build scaleable, responsive, optimized and elegant web user experiences using the latest standards and best practices in HTML5, CSS, and JS.</li>
+                    <li>Ownership of all front-end development, including code structure, style guides, testing, etc.</li>
+                    <li>Improve the quality, performance, and stability of front-end codebase.</li>
+                    <li>Work closely with product management, design, development and sales teams to create new features and refine existing ones.</li>
+                    <li>Build reusable code for future use.</li>
+                    <li>Make sure web pages are optimized for best speed and scalability.</li>
+                </ul>
+                <ul>Requirements
+                    <li>1-3 years front end development experience.</li>
+                    <li>Be proficient in coding languages such as HTML, CSS, JavaScript, JQuery and AngularJS experience.</li>
+                    <li>Experience with CSS preprocessors such as SASS, LESS, etc.</li>
+                    <li>Understanding of mobile development best practices (responsive design, progressive enhancement, graceful degradation etc).</li>
+                    <li>Understanding the principles of SEO.</li>
+                    <li>Good problem solving skills.</li>
+                </ul>
+                <form>
+                    <h2>Apply Now</h2>
+                        <label>Name</label>
+                        <input type="text" placeholder="Name"/>
+                        <br>
+                        <label>Email</label>
+                        <input type="email" placeholder="Email"/>
+                        <br>
+                        <label>Tell us about Yourself (300 - 1000 characters)</label>
+                        <input type="text" />
+                        <br>
+                        <label>Links to LinkedIn/Github etc (optional)</label>
+                        <input type="txt" placeholder="Link"/>
+                        <label>(Separate two links with a comma)</label>
+                        <br>
+                        <label>Resume (pdf,doc,docx)</label>
+                        <button>Choose File</button>
+                        <div id="robot">
+                            <div>
+                                <div></div>
+                                I'm not a robot
+                            </div>
+                            <div>
+                                <img src="	https://www.gstatic.com/recaptcha/api2/logo_48.png" alt="">
+                                <div><a href="https://www.google.com/intl/en/policies/privacy/">Privacy</a>-<a href="https://www.google.com/intl/en/policies/terms/">Terms</a></div>
+                            </div>
+                        </div>
+                        <button>Submit</button>
+                </form>
+            </div>
+            <hr>
+            <div id="right">
+                <h2>CURRENT OPENINGS</h2>
                 <div>
-                    <a href="#">Front-end developer</a>
-                    <a href="#">Senior Android Developer</a>
-                    <a href="#">Backend Engineer</a>
-                    <a href="#">Android Developer</a>
-                    <a href="#">Database Administrator</a>
-                    <a href="#">iOS Developer</a>
-                    <a href="#">Linux and Cloud Administrator - Bangalore</a>
-                    <a href="#">Lead Android Developer</a>
-                </div>
-                <h2>Content</h2>
-                <div>
-                    <a href="#">Motion Graphics Designer & Editor - Mumbai</a>
-                    <a href="#">Video Editor - Bangalore</a>
-                    <a href="#">Motion Graphics Artist - Bangalore</a>
+                    <h2>Engineering</h2>
+                    <div>
+                        <a href="Carerrs_Front-end_Devop.html">Front-end developer</a>
+                        <a href="#">Senior Android Developer</a>
+                        <a href="Carerrs_Back-end_Engg.html">Backend Engineer</a>
+                        <a href="#">Android Developer</a>
+                        <a href="#">Database Administrator</a>
+                        <a href="#">iOS Developer</a>
+                        <a href="#">Linux and Cloud Administrator - Bangalore</a>
+                        <a href="#">Lead Android Developer</a>
+                    </div>
+                    <h2>Content</h2>
+                    <div>
+                        <a href="#">Motion Graphics Designer & Editor - Mumbai</a>
+                        <a href="#">Video Editor - Bangalore</a>
+                        <a href="#">Motion Graphics Artist - Bangalore</a>
+                    </div>
                 </div>
             </div>
         </div>
