all issues of day-3

--- a/day-3/India_Players_Page.html
+++ b/day-3/India_Players_Page.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="player.css" />
 </head>
 <body>
-    <div>
+    <div id="main">
         <h1>Indain National Cricket Team</h1>
         <div>
             <a href="India_Home_Page.html">Home</a>
@@ -19,6 +20,7 @@
             <a href="#">Stats</a>
             <a href="India_Players_Page.html">Players</a>
         </div>
+        <hr>
         <div>
             <div>
                 <h2>BATSMAN</h2>
@@ -30,6 +32,7 @@
                 <h2>BOWLER</h2>
                 <div id="ball"></div>
             </div>
+            <hr>
             <div id="right-side">
                 <h3>LATEST NEWS</h3>
             </div>
