--- a/Footer.html
+++ b/Footer.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Footer.css">
 </head>
 <body>
-    <div id="down">
+    <div id="foterdown">
         <div id="foter">
             <div>
                 <div>
