--- a/day-4/Careers.html
+++ b/day-4/Careers.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cricbuzz.com/More/Careers</title>
     <link rel="stylesheet" href="careers.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="footer.css">
