--- a/day-4/Carerrs_Front-end_Devop.html
+++ b/day-4/Carerrs_Front-end_Devop.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cricbuzz.com/More/Careers/Front-end developer</title>
     <link rel="stylesheet" href="Carerrs_Back.css" />
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="footer.css">
