--- a/day-5/Account.html
+++ b/day-5/Account.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cricbuzz.com/Account</title>
     <link rel="stylesheet" href="acc.css" />
 </head>
 <body>
